fix: Fix textalign

--- a/src/components/atoms/ArrowButton/style.css
+++ b/src/components/atoms/ArrowButton/style.css
@@ -8,4 +8,5 @@
     margin: 10px auto;
     cursor: pointer;
     font-size: 24px;
+    text-align: center;
 }
